# PoC-QA

./: README.md  sonar-project.properties
.github/workflows/: build.yml
smart_lock/: CMakeLists.txt  main.cpp
smart_lock/connectivity/: mqtt.cpp  mqtt.h  network.cpp  network.h
smart_lock/storage/: key_store.cpp  key_store.h  storage_driver.cpp  storage_driver.h
